--- a/demo/src/main/webapp/food_order.html
+++ b/demo/src/main/webapp/food_order.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title id="title">Thintava Macha</title>
+  <title id="title">India Spice Haven</title>
   <link rel="icon" type="image/x-icon" href="food_order_logo.png">
   <link rel="stylesheet" href="food_order.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 <script src="food_order.js"></script>
@@ -13,19 +15,33 @@
   <img class="logo"src="food_order.png">
 </span>
   <div class="name">
-    <h1>Thintava Macha</h1>
+    <h1>India Spice Heaven</h1>
   </div>
 
 </center>
-<div class="gap">
-</div>
 <div class="navy">
   <a href="#">Home</a>
   <a href="#">Menu</a>
   <a href="#">Online orders</a>
   <a href="#">Gallery</a>
+  <a href="#">Customer review</a>
   <a href="#">About us</a>
   <a href="#">Contact us</a>
+</div>
+<div class="container">
+<div class="nav_1">
+  <i class="fa fa-home" style="font-size:15px;color:white"><a href="#">Home</a></i>
+  <i class='fas fa-glass-cheers' style='font-size:15px;color:white;'><a href="#">Menu</a></i>
+  <i class='fas fa-cart-arrow-down' style='font-size:15px;color:white;'><a href="#">Online orders</a></i>
+  <i class='far fa-images' style='font-size:15px;color:white;'><a href="#">Gallery</a></i>
+  <i class='fas fa-frown' style='font-size:15px;color:white;'><a href="#">Customer review</a></i>
+  <i class='fas fa-glass-cheers' style='font-size:15px;color:white;'><a href="#">About us</a></i>
+  <i class='fas fa-address-book' style='font-size:15px;color:white;'><a href="#">Contact us</a></i>
+</div>
+<div class="para">
+<span>We aim to help you create fancy food descriptions in less time than it would take the average restaurant to serve you drinks. Studies show that your business can benefit tremendously from doing so. In fact, applying just a few menu writing tips, you could sell up to 30% more food.</span>
+  <img src="food_order_para.jpg" alt="para-img">
+</div>
 </div>
 </body>
 </html>
