--- a/demo/src/main/webapp/menu.html
+++ b/demo/src/main/webapp/menu.html
@@ -1,24 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Menu</title>
+  <meta charset="UTF-8">
+  <title id="title">India Spice Haven</title>
+  <link rel="icon" type="image/x-icon" href="food_order_logo.png">
   <link rel="stylesheet" href="menu.css">
 </head>
 <body>
-<div class="main">
-  <div class="section-title">
-    <h4>Our Menu</h4>
-    <p>Lorem ipsum dolor sit amet,consectuor adipiscing elit.Labore,enum!</p>
+<div class="nav">
+  <a href="menu.html">Appetizers</a>
+  <a href="maincourse.html">Main course</a>
+  <a href="deserts.html">Deserts</a>
+  <a href="soups.html">Soups</a>
+</div>
+<br>
+<div class="samosa">
+  <div class="img">
+<img src="somasa.jpg">
   </div>
-  <div class="menus">
-    <div class="menu-column">
-      <h4>break fast</h4>
-      <div class="single-menu">
-
-      </div>
-    </div>
+  <div class="description">Vegetable Samosa </div>
+    <p>30 rs</p>
+    <button type="submit">Add</button>
+</div>
+<br>
+<div class="cucumbershrimp">
+  <div class="img">
+    <img src="cucumbershrimp.jpg">
   </div>
+  <div class="description">Cucumber Shrimp</div>
+  <p>300 rs</p>
+  <button type="submit">Add</button>
+</div>
+<br>
+<div class="ap3">
+  <div class="img">
+    <img src="CapreseSalad.jpg">
+  </div>
+  <div class="description">Caprese Salad </div>
+  <p>250 rs</p>
+  <button type="submit">Add</button>
+</div>
+<br>
+<div class="ap4">
+  <div class="img">
+    <img src="flavour%20bombs.jpg">
+  </div>
+  <div class="description">Flavour Bombs</div>
+  <p>259 rs</p>
+  <button type="submit">Add</button>
 </div>
 </body>
 </html>
