--- a/demo/src/main/webapp/customer_review.html
+++ b/demo/src/main/webapp/customer_review.html
@@ -10,7 +10,7 @@
 <body>
 <div class="main">
 <section class="reviews">
-  <h2>Customer Reviews and Ratings</h2>
+  <h2 style="color:white;">Customer Reviews and Ratings</h2>
   <div class="review-form">
     <input type="text" id="username" placeholder="Your Name">
     <textarea id="review" placeholder="Write your review"></textarea>
