--- a/demo/src/main/webapp/food_order.html
+++ b/demo/src/main/webapp/food_order.html
@@ -5,43 +5,37 @@
   <title id="title">India Spice Haven</title>
   <link rel="icon" type="image/x-icon" href="food_order_logo.png">
   <link rel="stylesheet" href="food_order.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-<script src="food_order.js"></script>
 <center>
-<span class="head" >
-  <img class="logo"src="food_order.png">
-</span>
+    <span class="head">
+      <img class="logo" src="food_order.png">
+    </span>
   <div class="name">
     <h1>India Spice Heaven</h1>
   </div>
-
 </center>
 <div class="navy">
-  <a href="#">Home</a>
-  <a href="#">Menu</a>
+  <a href="food_order.html">Home</a>
+  <a href="menu.html">Menu</a>
   <a href="#">Online orders</a>
   <a href="#">Gallery</a>
-  <a href="#">Customer review</a>
-  <a href="#">About us</a>
-  <a href="#">Contact us</a>
+  <a href="table_and_catering">Table Reservations and caterings</a>
+  <a href="customer_review.html">Customer review</a>
+  <a href="aboutus.html">About us</a>
+  <a href="contatcus.html">Contact us</a>
 </div>
-<div class="container">
-<div class="nav_1">
-  <i class="fa fa-home" style="font-size:15px;color:white"><a href="#">Home</a></i>
-  <i class='fas fa-glass-cheers' style='font-size:15px;color:white;'><a href="#">Menu</a></i>
-  <i class='fas fa-cart-arrow-down' style='font-size:15px;color:white;'><a href="#">Online orders</a></i>
-  <i class='far fa-images' style='font-size:15px;color:white;'><a href="#">Gallery</a></i>
-  <i class='fas fa-frown' style='font-size:15px;color:white;'><a href="#">Customer review</a></i>
-  <i class='fas fa-glass-cheers' style='font-size:15px;color:white;'><a href="#">About us</a></i>
-  <i class='fas fa-address-book' style='font-size:15px;color:white;'><a href="#">Contact us</a></i>
+<div class="back">
+  <p style="color:whitesmoke;font-size:40px;">Welcome to India Spice Heaven</p>
+  <p style="color:whitesmoke;font-size:20px;padding-left:160px;">Delivering great food for more than 18 years</p>
+  <br>
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  <button id="menuButton" type="submit" onclick="window.location.href='menu.html'">Menu</button>
+  <button  id="tableButton" type="submit">Book a table</button>
 </div>
-<div class="para">
-<span>We aim to help you create fancy food descriptions in less time than it would take the average restaurant to serve you drinks. Studies show that your business can benefit tremendously from doing so. In fact, applying just a few menu writing tips, you could sell up to 30% more food.</span>
-  <img src="food_order_para.jpg" alt="para-img">
-</div>
-</div>
+<iframe src="https://www.google.com/maps/@16.2333746,80.548333,17z?entry=ttu"></iframe>
 </body>
 </html>
