changed name to gender

--- a/register/src/main/webapp/index.html
+++ b/register/src/main/webapp/index.html
@@ -25,7 +25,7 @@
     <input id="pass" type="password" name="pass" placeholder="please enter the password">
     <br>
     <label for="gender" >Gender:</label>
-    <select id="gender" name="clubs">
+    <select id="gender" name="gender">
       <option value="Female">Female</option>
       <option value="Male" selected>Male</option>
     </select>
