--- a/demo/src/main/webapp/registration_form.html
+++ b/demo/src/main/webapp/registration_form.html
@@ -6,123 +6,83 @@
   <link rel="stylesheet" href="registration_form.css">
 </head>
 <body>
-<form>
+<form action="registration_form.jsp" target="_self" method="post">
+    <script src="registration_form.js"></script>
 <div class="regup">
   <div class="reg">
     <h1>Registration form</h1>
-      <div class="row">
-        <div class="input-container">
-          <label for="fn">FirstName:</label>
-          <input type="text" id="fn" placeholder="Please enter the First Name">
-        </div>
-        <div class="input-container">
-          <label for="ln">Last Name:</label>
-          <input type="text" id="ln" placeholder="Please enter the Last Name">
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-container">
-          <label for="clubs">Nationality:</label>
-          <select id="clubs" name="clubs">
-            <option value="Ncc">Indian</option>
-            <option value="Nss">American</option>
-            <option value="Sac" selected>Australian</option>
-            <option value="E-cell">Korean</option>
-          </select>
-        </div>
-        <div class="input-container">
+          <label for="user_name">Username:</label>
+          <input type="text" id="user_name" name="user_name" placeholder="Enter the user name" required>
+      <br><br>
+      <label for="gender" >Gender:</label>
+      <select id="gender" name="gender">
+          <option value="Female">Female</option>
+          <option value="Male" selected>Male</option>
+      </select>
+    <br><br>
           <label for="email">Email:</label>
-          <input type="text" id="email" placeholder="Please enter your email id">
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-container">
-          <p>Gender</p>
-          <input type="radio" name="gender" id="genderm" value="male">
-          <label for="genderm">male</label>
-          <input type="radio" name="gender" id="genderf" value="female">
-          <label for="genderf">female</label>
-        </div>
-        <div class="input-container">
-          <label for="pass">Password:</label>
-          <input type="password" id="pass" placeholder="Please enter the password">
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-container">
-          <label for="re">Reenter Password:</label>
-          <input type="text" id="re" placeholder="Please reenter password">
-        </div>
-        <div class="input-container">
+          <input type="text" id="email" name="email" placeholder="Enter your email id" required>
+    <br><br>
+      <label for="mo">Mobile Number:</label>
+      <input type="text" id="mo" name="phone_number" placeholder="Enter the mobile number" required>
+    <br>
+    <br>
+      <label for="pass">Password:</label>
+      <input type="password" id="pass" name="pass" placeholder="Please enter the password" required>
+    <br><br>
+      <label for="re">Reenter Password:</label>
+      <input type="password" id="re" name="reenter" placeholder="Please reenter password" required>
+          <br><br>
           <label for="dob">Date of birth:</label>
-          <input type="date" id="dob" value="2004-07-02">
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-container">
-          <label for="mo">Mobile Number:</label>
-          <input type="number" id="mo" placeholder="Please enter the mobile number">
-        </div>
-        <div class="input-container">
-          <p>Gender</p>
-          <input type="radio" name="gender" id="yes" value="male">
-          <label for="yes">Yes</label>
-          <input type="radio" name="gender" id="No" value="female">
-          <label for="No">No</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-container">
+          <input type="date" id="dob" name="dob" value="2004-07-02"><br><br>
+      <label for="nationality">Nationality:</label>
+      <select id="nationality" name="nationality">
+          <option value="ind">Indian</option>
+          <option value="ame">American</option>
+          <option value="aus" selected>Australian</option>
+          <option value="kor">Korean</option>
+      </select>
+      <br><br>
           <label for="pre">Food preferences:</label>
           <br>
-          <select id="pre" name="clubs">
-            <option value="Ncc">Vegetarian</option>
-            <option value="Nss">Non-Vegetarian</option>
-            <option value="Sac" selected>Vegan</option>
-            <option value="E-cell">Cannibals</option>
+          <select id="pre" name="preferences">
+            <option value="veg">Vegetarian</option>
+            <option value="non-veg">Non-Vegetarian</option>
+            <option value="vegan" selected>Vegan</option>
+            <option value="cannibals">Cannibals</option>
           </select>
-        </div>
-        <div class="input-container">
-          <p>Gulten free:</p>
-          <input type="radio" name="gender" id="gl" value="male">
-          <label for="gl">Yes</label>
-          <input type="radio" name="gender" id="glf" value="female">
-          <label for="glf">No</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-container">
-          <label for="fo">Favourite Food:</label>
-          <br>
-          <select id="fo" name="clubs">
-            <option value="Ncc">Pizaa</option>
-            <option value="Nss">Burger</option>
-            <option value="Sac" selected>sandwich</option>
-            <option value="E-cell">kfc</option>
-          </select>
-        </div>
-        <div class="input-container">
-          <p>News Letter:</p>
-          <input type="radio" name="gender" id="gl" value="male">
-          <label for="gl">Yes</label>
-          <input type="radio" name="gender" id="glf" value="female">
-          <label for="glf">No</label>
-        </div>
-      </div>
-      <div class="input-container">
-        <label for="foi">Favourite cuisine:</label>
-        <br>
-        <select id="foi" name="clubs">
-          <option value="Ncc">American</option>
-          <option value="Nss">Australian</option>
-          <option value="Sac" selected>Asian</option>
-          <option value="E-cell">Korean</option>
-        </select>
-      </div>
+    <br><br>
+      <label for="fo">Favourite Food:</label>
       <br>
-    <form action="">
-      <button type="submit">Submit</button>
-    </form>
+      <select id="fo" name="favourite_food">
+          <option value="pizza">Pizza</option>
+          <option value="burger">Burger</option>
+          <option value="sandwich" selected>sandwich</option>
+          <option value="kfc">kfc</option>
+      </select>
+          <br><br>
+      <label for="foi">Favourite cuisine:</label>
+      <br>
+      <select id="foi" name="cuisine">
+          <option value="ame">American</option>
+          <option value="aus">Australian</option>
+          <option value="asi" selected>Asian</option>
+          <option value="kor">Korean</option>
+      </select>
+    <br><br>
+    <label for="news_letter" >News Letter:</label>
+    <select id="news_letter" name="news_letter">
+      <option value="yes">yes</option>
+      <option value="no" selected>No</option>
+    </select>
+    <br><br>
+      <label for="gender" >Gluten free:</label>
+      <select id="gf" name="gluten_free">
+          <option value="gf">yes</option>
+          <option value="gf" selected>No</option>
+      </select>
+      <br><br>
+      <button type="submit" >Submit</button>
   </div>
 </div>
 </form>
