--- a/demo/src/main/webapp/soups.html
+++ b/demo/src/main/webapp/soups.html
@@ -21,7 +21,7 @@
     </a>
     <div class="desc">
       <p class="rupees">Samosa ₹30</p>
-    <button type="submit" style="height:22px;width:30px" class="add">Add</button>
+      <button type="submit" style="height:22px;width:30px" class="add">Add</button>
     </div>
   </div>
 </div>
@@ -60,44 +60,44 @@
 </div>
 <div class="responsive">
   <div class="gallery clearfix">
-    <a target="_blank" href="food_img_5.png" class="for_img">
-      <img src="food_img_5.png" alt="fruit charcuteirie board">
+    <a target="_blank" href="food_img_4.jpg" class="for_img">
+      <img src="food_img_4.jpg" alt="Shrimp cucumber crackers">
     </a>
     <div class="desc">
-      <p class="rupees">fruit charcuteirie board ₹290</p>
+      <p class="rupees">Shrimp cucumber crackers ₹340</p>
       <button type="submit" style="height:22px;width:30px" class="add">Add</button>
     </div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery clearfix">
-    <a target="_blank" href="food_img_6.png" class="for_img">
-      <img src="food_img_6.png" alt="hot spanish artichoke dip">
+    <a target="_blank" href="food_img_4.jpg" class="for_img">
+      <img src="food_img_4.jpg" alt="Shrimp cucumber crackers">
     </a>
     <div class="desc">
-      <p class="rupees">hot spanish artichoke dip ₹390</p>
+      <p class="rupees">Shrimp cucumber crackers ₹340</p>
       <button type="submit" style="height:22px;width:30px" class="add">Add</button>
     </div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery clearfix">
-    <a target="_blank" href="food_img_7.png" class="for_img">
-      <img src="food_img_7.png" alt="teriyaki pineapple meat balls">
+    <a target="_blank" href="food_img_4.jpg" class="for_img">
+      <img src="food_img_4.jpg" alt="Shrimp cucumber crackers">
     </a>
     <div class="desc">
-      <p class="rupees">teriyaki pineapple meat balls ₹140</p>
+      <p class="rupees">Shrimp cucumber crackers ₹340</p>
       <button type="submit" style="height:22px;width:30px" class="add">Add</button>
     </div>
   </div>
 </div>
 <div class="responsive">
   <div class="gallery clearfix">
-    <a target="_blank" href="food_img_8.png" class="for_img">
-      <img src="food_img_8.png" alt="savory part bread">
+    <a target="_blank" href="food_img_4.jpg" class="for_img">
+      <img src="food_img_4.jpg" alt="Shrimp cucumber crackers">
     </a>
     <div class="desc">
-      <p class="rupees">savory part bread ₹340</p>
+      <p class="rupees">Shrimp cucumber crackers ₹340</p>
       <button type="submit" style="height:22px;width:30px" class="add">Add</button>
     </div>
   </div>
