--- a/demo/src/main/webapp/food_order.html
+++ b/demo/src/main/webapp/food_order.html
@@ -20,12 +20,11 @@
 <div class="navy">
   <a href="food_order.html">Home</a>
   <a href="menu.html">Menu</a>
-  <a href="#">Online orders</a>
-  <a href="#">Gallery</a>
-  <a href="table_and_catering">Table Reservations and caterings</a>
+  <a href="gallery.html">Gallery</a>
+  <a href="table_catering.html">Table Reservations and caterings</a>
   <a href="customer_review.html">Customer review</a>
   <a href="aboutus.html">About us</a>
-  <a href="contatcus.html">Contact us</a>
+  <a href="contact.html">Contact us</a>
 </div>
 <div class="back">
   <p style="color:whitesmoke;font-size:40px;">Welcome to India Spice Heaven</p>
@@ -34,8 +33,7 @@
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   <button id="menuButton" type="submit" onclick="window.location.href='menu.html'">Menu</button>
-  <button  id="tableButton" type="submit">Book a table</button>
+  <button  id="tableButton" type="submit" onclick="window.location.href='table_catering.html'">Book a table</button>
 </div>
-<iframe src="https://www.google.com/maps/@16.2333746,80.548333,17z?entry=ttu"></iframe>
 </body>
 </html>
