some files are added and some major changes

--- a/demo/src/main/webapp/contact.html
+++ b/demo/src/main/webapp/contact.html
@@ -25,7 +25,7 @@
 <div class="content">
   <h1>Contact Us</h1>
   <p>We'd love to hear from you! Please use the form below to get in touch with us.</p>
-  <form method="post">
+  <form action="contact.jsp" method="post">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
 <br><br>
