--- a/demo/src/main/webapp/food_order.html
+++ b/demo/src/main/webapp/food_order.html
@@ -19,7 +19,7 @@
 </center>
 <div class="navy">
   <a href="food_order.html">Home</a>
-  <a href="menu.html">Menu</a>
+  <a href="menu.jsp">Menu</a>
   <a href="gallery.html">Gallery</a>
   <a href="table_catering.html">Table Reservations and caterings</a>
   <a href="customer_review.html">Customer review</a>
@@ -32,7 +32,7 @@
   <br>
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  <button id="menuButton" type="submit" onclick="window.location.href='menu.html'">Menu</button>
+  <button id="menuButton" type="submit" onclick="window.location.href='menu.jsp'">Menu</button>
   <button  id="tableButton" type="submit" onclick="window.location.href='table_catering.html'">Book a table</button>
 </div>
 </body>
