--- a/demo/src/main/webapp/registration_form.html
+++ b/demo/src/main/webapp/registration_form.html
@@ -7,7 +7,6 @@
 </head>
 <body>
 <form action="registration_form.jsp" target="_self" method="post">
-    <script src="registration_form.js"></script>
 <div class="regup">
   <div class="reg">
     <h1>Registration form</h1>
@@ -76,7 +75,7 @@
       <option value="no" selected>No</option>
     </select>
     <br><br>
-      <label for="gender" >Gluten free:</label>
+      <label for="gf" >Gluten free:</label>
       <select id="gf" name="gluten_free">
           <option value="gf">yes</option>
           <option value="gf" selected>No</option>
