--- a/demo/src/main/webapp/login_form.html
+++ b/demo/src/main/webapp/login_form.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title id="title">India Spice Haven</title>
   <link rel="icon" type="image/x-icon" href="food_order_logo.png">
-  <link rel="stylesheet" href="login_form.css" />
+  <link rel="stylesheet" href="login.css" />
 </head>
 <body>
 <form action="login.jsp" method="post" target="_self">
@@ -13,7 +13,7 @@
   <script src="login.js"></script>
   <label for="user"><h3>Username:</h3></label>
   <input type="text" id="user" name="user" placeholder="Enter the username" required><br>
-  <label for="pass">Password:</label><br>
+  <label for="pass"><h3>Password:</h3></label><br>
   <input type="password" id="pass" name="pass" placeholder="Enter the password" required><br>
   <a href="#" id="forgot">Forgot Password?</a>
   <br><br>
