In home.html table booking changed to table.html

--- a/demo/src/main/webapp/food_order.html
+++ b/demo/src/main/webapp/food_order.html
@@ -33,7 +33,7 @@
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   <button id="menuButton" type="submit" onclick="window.location.href='menu.jsp'">Menu</button>
-  <button  id="tableButton" type="submit" onclick="window.location.href='table_catering.html'">Book a table</button>
+  <button  id="tableButton" type="submit" onclick="window.location.href='table.html'">Book a table</button>
 </div>
 </body>
 </html>
