--- a/demo/src/main/webapp/login_form.html
+++ b/demo/src/main/webapp/login_form.html
@@ -11,9 +11,9 @@
 <div class="tags">
   <h1>Login</h1>
   <script src="login.js"></script>
-  <label for="user"><h3>Username:</h3></label>
+  <label for="user" style="font-family: 'Open Sans', sans-serif;font-size: 20px;">user name:</label>
   <input type="text" id="user" name="user" placeholder="Enter the username" required><br>
-  <label for="pass"><h3>Password:</h3></label><br>
+  <label for="pass" style="font-family: 'Open Sans', sans-serif;font-size: 20px;">password:</label>
   <input type="password" id="pass" name="pass" placeholder="Enter the password" required><br>
   <a href="#" id="forgot">Forgot Password?</a>
   <br><br>
